Added main loop sleep delay.

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "loop_update": 0.05,
     "midi": {
         "max_channel": 15,
         "min_channel": 0,
@@ -22,7 +23,7 @@
     },
     "audio": {
         "rate": 22050,
-        "buffer": 4096,
+        "buffer": 1024,
         "type": "i2s",
         "clk": "GP0",
         "ws": "GP1",
